--- a/src/app/pages/most-viewed/most-viewed.component.html
+++ b/src/app/pages/most-viewed/most-viewed.component.html
@@ -1,16 +1,11 @@
+<app-page-loader *ngIf="isLoadingCount>0"></app-page-loader>
+<div>
 <div class="hero-container">
     <h1 class="hero-heading">Most Viewed Blogs </h1>
 </div>
 
 <div class="card-container most-viewed-container">
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
+    <app-card *ngFor="let blog of mostViewedPosts" [blogData]="blog"></app-card>
+</div>
+<app-custom-pagination [pageNumber]="pageNumber" [pageSize]="pageSize" [lastPage]="lastPage" [totalElements]="totalElements" [totalPages]="totalPages"    (sentPageNumber)="onPageChanged($event)" ></app-custom-pagination>
 </div>
