--- a/src/app/pages/my-post/my-post.component.css
+++ b/src/app/pages/my-post/my-post.component.css
@@ -11,6 +11,10 @@
 .title{
     text-align: center;
 }
+.post-img{
+    max-width: 70px;
+    max-height:70px ;
+}
 .description{
     text-align: center;
     margin-bottom: 16px;
@@ -51,4 +55,10 @@ img {
 }
 .column-4 {
     width: 20%; /* Width for Action column */
+}
+
+.no-post{
+    display: flex;
+    justify-content: center;
+    margin-top: 24px;
 }
