--- a/src/app/pages/single-blog/single-blog.component.html
+++ b/src/app/pages/single-blog/single-blog.component.html
@@ -2,49 +2,83 @@
     <div class="left-container">
 
         <div class="category-container">
-            <div class="category">Category</div>
-            <p class="created-at">Sep 12,2024</p>
+            <div class="category">{{blogData?.category?.title}}</div>
+            <p class="created-at">{{blogData?.createdDate}}</p>
         </div>
 
-        <h2 class="title">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
-        <img class="blog-img" src="https://images.pexels.com/photos/28104106/pexels-photo-28104106/free-photo-of-a-view-of-a-bridge-over-a-river-and-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+        <h2 class="title">{{blogData?.title}}</h2>
+        <img class="blog-img" src={{blogData?.imageUrl}} alt="">
 
         <div class="author-data">
-            <img class="author-img" src="https://images.pexels.com/photos/28104106/pexels-photo-28104106/free-photo-of-a-view-of-a-bridge-over-a-river-and-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
-            <p class="authorname">tanish chauhan</p>
+            <!-- <img class="author-img" src="https://images.pexels.com/photos/28104106/pexels-photo-28104106/free-photo-of-a-view-of-a-bridge-over-a-river-and-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt=""> -->
+            <p class="authorname">{{blogData?.createdBy?.username}}</p>
         </div>
 
         <div class="content-container">
-
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui alias ex id saepe ducimus tenetur dolore cupiditate ullam beatae, eum rem aut iure, vero ipsam. Asperiores ratione doloremque aperiam id?
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi cum fugit sunt, quod aut consequatur doloribus nostrum vel quas dolor facilis. Fugit voluptate omnis doloremque voluptatibus illum eius facere porro?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor exercitationem, numquam perspiciatis labore maiores voluptas harum reiciendis optio! Dolores aspernatur voluptatem praesentium, quidem dicta laboriosam officia totam. Molestiae, alias tenetur.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam necessitatibus fuga quis natus magnam nobis animi, iste ut quam perspiciatis possimus ullam, a nemo iure vero sed eius libero? Error.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod ratione corrupti tenetur id neque labore eaque voluptate tempora minima odio deserunt sapiente blanditiis dolorum ducimus consequatur, autem necessitatibus iste debitis.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vero dicta molestias nemo corrupti illo, ad magni deserunt, reiciendis aperiam voluptates excepturi voluptatibus accusantium dolorem fugiat saepe aliquid in nesciunt?
+            {{blogData?.content}}
         </div>
         <div class="post-footer">
-            <p class="likes">likes 1.5k</p>
-            <p class="views">views(112,234)</p>
+            <p class="likes btn" (click)="onLike(blogData?.id)">likes {{likeCount}}</p>
+            <p class="views">views({{blogData?.viewCount}})</p>
         </div>
         <div class="create-comment">
             <h3 class="leave-comment">Leave a Comment</h3>
-            <textarea rows="3"  id=""></textarea>
+            <div class=" add-comment-container">
+                <textarea rows="3"  id="" name="addCommentField" [(ngModel)]="addCommentField"></textarea>
+                <button class="btn" (click)="addComment()">send</button>
+            </div>
+            
         </div>
         <div class="comments-container">
-            <h3 class="all-comments">comments(23)</h3>
-            <div class="user-comment-container">
-                <img class="user-comment-img" src="https://images.pexels.com/photos/28104106/pexels-photo-28104106/free-photo-of-a-view-of-a-bridge-over-a-river-and-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
-                <p class="user-comment" >what thype of blog is this</p>
+            <h3 class="all-comments">comments({{totalElements}})</h3>
+
+            <div *ngIf="totalElements !=0">
+                <div class="user-comment-container" *ngFor="let comment of comments">
+                    <!-- <div class="comment-user-data">
+                        
+                        <img class="user-comment-img" src="https://images.pexels.com/photos/28104106/pexels-photo-28104106/free-photo-of-a-view-of-a-bridge-over-a-river-and-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+                        <p>{{comment.user.userName}}</p>
+                    </div> -->
+                    
+
+                    <div class="comment-content-container">
+
+                        <div class="comment-user-data">
+                            <p>{{comment.user.username}}</p>
+                        </div>
+                        <ng-content *ngIf=" (editCommentId !== comment.id)">
+                            <p class="user-comment">{{comment.content}}</p>
+                        </ng-content>
+
+                        <ng-content *ngIf="editCommentId && (editCommentId === comment.id)">
+                            <input type="text" class="edit-input" name="editCommentField" [(ngModel)]="editCommentField">
+                        </ng-content>
+
+
+                    </div>
+                    <div class="comment-action-container" *ngIf="userData?.email === comment.user.email">
+
+
+                        <div *ngIf=" (editCommentId !== comment.id)">
+                            <button class="btn btn-full" (click)="onEdit(comment.id,comment.content)">edit</button>
+                            <button class="btn btn-full"(click)="onDelete(comment.id)">delete</button>
+                        </div>
+
+
+                        <div *ngIf="editCommentId && (editCommentId === comment.id)">
+                            <button class="btn btn-full" (click)="updateComment(comment.id)">update</button>
+                            <button class="btn btn-full" (click)="onCancel()">cancel</button>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div *ngIf="!lastPage">
+                    <button class="btn" (click)="loadMore()" >Load more</button>
+                </div>
             </div>
-            <div class="user-comment-container">
-                <img class="user-comment-img" src="https://images.pexels.com/photos/28104106/pexels-photo-28104106/free-photo-of-a-view-of-a-bridge-over-a-river-and-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">                <p class="user-comment" >what thype of blog is this</p>
-            </div>
-            <div class="user-comment-container">
-                <img class="user-comment-img" src="https://images.pexels.com/photos/28104106/pexels-photo-28104106/free-photo-of-a-view-of-a-bridge-over-a-river-and-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">                <p class="user-comment" >what thype of blog is this</p>
-            </div>
-            <div class="user-comment-container">
-                <img class="user-comment-img" src="https://images.pexels.com/photos/28104106/pexels-photo-28104106/free-photo-of-a-view-of-a-bridge-over-a-river-and-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">                <p class="user-comment" >what thype of blog is this</p>
+            <div *ngIf="totalElements == 0" class="no-comment">
+                Be the first one to comment on this post
             </div>
         </div>
     </div>
@@ -53,9 +87,7 @@
     <div class="right-container">
         <h2>Similar Blogs</h2>
         <div class="card-container">
-            <app-card></app-card>
-            <app-card></app-card>
-            <app-card></app-card>
+            <app-card *ngFor="let blog of similarBlog" [blogData]="blog"></app-card>
         </div>
     </div>
 </div>
