--- a/src/app/layouts/footer/footer.component.css
+++ b/src/app/layouts/footer/footer.component.css
@@ -1,8 +1,10 @@
 footer{
-    background-color: black;
+    background-color: black !important;
     padding-top: 15px;
     color: white;
     height: 100px;
+    margin-top:16px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .copyright{
     text-align: center;
