--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="global-wrapper">
+    <div class="global-wrappe">
         <div class="copyright">
             <h2>Copyright 2024. All Rights Reserved </h2>
         </div>
