--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -1,8 +1,104 @@
 .nav-container{
+    width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
+    overflow-x: hidden;
+    background-color: white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    margin-bottom: 16px;
+    /* border:5px solid green; */
+    /* position: relative; */
+}
+.nav-logo{
 
+    background: #af40ff;
+    /* margin: 15px;
+    padding: 18px 22px; */
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    transition: .3s;
+    z-index: 1;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 12px;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-weight: 700;
+     /* border: 2px solid black !important; */
+    padding: 8px 16px;
+    border-radius: 8px;
+    /* animation: rotateBorder 4s linear infinite;  */
+    /* &:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    animation: pulse 0.6s infinite; 
+  } */
+}
+.nav-logo:before {
+    content: '';
+    background: linear-gradient(225deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: 400%;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    transition: opacity .3s ease-in-out;
+    border-radius: 12px;
+}
+.nav-logo:hover:before {
+    animation: glowing 20s linear infinite;
+}
+.nav-logo:active:before {
+    background: #000137;
+}
+@keyframes glowing {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+@keyframes rotateBorder {
+    0% {
+      border-color: #3498db; /* Initial color */
+    }
+    25% {
+      border-color: #e74c3c; /* Second color */
+    }
+    50% {
+      border-color: #f1c40f; /* Third color */
+    }
+    75% {
+      border-color: #9b59b6; /* Fourth color */
+    }
+    100% {
+      border-color: #3498db; /* Back to initial */
+    }
+  }
+
+  
+  @keyframes pulse {
+    0%, 100% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.05);
+    }
+  }
+.global-wrapper{
+    /* position: relative; */
+    /* position: absolute; */
+    width: 100%;
+    overflow: hidden;
 }
 nav{
     display: flex;
@@ -21,5 +117,59 @@ ul li{
 .nav-links-container{
     display: flex;
     align-items: center;
+}
+
+.sidebar,.open-container{
+    display: none;
+}
+
+
+
+@media (max-width:768px)  {
+
+    .nav-links-container{
+        display: none;
+    }
+    
+    .open-container.active{
+        display: block;
+    }
+
+
+    .sidebar{
+        width: 250px;
+        display:block;
+        min-height: 100vh;
+        position: fixed;
+        border:1px solid red;
+        background-color: white;
+        z-index: 1;
+        top: 0px;
+        right: -786px;
+        transition: all 0.3s ease-in-out;
+    }
+    .sidebar.open{
+        /* display: block; */
+        transition: all 1s ease;
+        right: 0px;
+    }
+    
+    .close-container{
+        height: 50px;
+        padding: 16px;
+        /* border:1px solid blue; */
+        display: flex;
+        justify-content: end;
+        margin-bottom: 16px;
+        align-items: center;
+    }
+    .link-container{
+        display: flex;
+        flex-direction: column;
+        gap:16px;
+    }
+    
+
+
 }
 
