--- a/src/app/pages/single-blog/single-blog.component.css
+++ b/src/app/pages/single-blog/single-blog.component.css
@@ -7,12 +7,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin:8px 0px;
 }
 .category{
     padding: 4px 10px;
     border-radius: 20px;
     border:1px solid black;
-    background-color:#BFA7FD;
+    background: linear-gradient(to right, #A2C2E0, #E4F1F5) ;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
 }
 .blog-img{
@@ -30,6 +32,8 @@
     align-items: center;
     gap: 8px;
     margin:8px 0px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 .author-img{
     width: 20px;
@@ -64,6 +68,13 @@ textarea{
 }
 .comments-container{
     margin:16px 0px;
+}
+.all-comments-container{
+    border:1px solid red;
+    max-height: 500px;
+    overflow-y: scroll;
+    background-color: #DCDCDC;
+    padding: 16px;
 }
 .user-comment-container{
     display: flex;
@@ -104,6 +115,16 @@ textarea{
 .right-container h2{
     text-align: center;
     margin:15px 0px;
+}
+.load-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 16px auto;
+}
+.liked{
+    background: linear-gradient(to right, #A2C2E0, #E4F1F5) ;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 @media (max-width: 768px) {
     .single-page-container {
