--- a/src/app/shared/card/card.component.css
+++ b/src/app/shared/card/card.component.css
@@ -1,15 +1,30 @@
 .card{
     cursor: pointer;
+    padding: 16px;
+    background-color: #F0FFF0;
+    background: linear-gradient(to right, #A2C2E0, #E4F1F5) ;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
 }
+.card:hover {
+    transform: scale(1.05); /* Slightly enlarge the card */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Enhance shadow on hover */
+  }
 .card-img{
     width: 100%;
     height: 200px;
     object-fit: cover;
 }
+.card-title{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .card-data{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 8px 0px;
 }
 .card-user-img{
     width: 30px;
@@ -29,6 +44,18 @@
     align-items: center;
     gap: 16px;
 }
+.card-username{
+    white-space: nowrap;
+    /* word-wrap:n; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 60%;
+    
+}
+span{
+    font-weight: bold;
+}
+
 .blog-content{
     /* word-wrap:break-word; */
     /* display: -webkit-box;
