--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@200..700&display=swap');
+*/
+
+/* @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Oswald:wght@200..700&display=swap'); */
+/* 
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bebas+Neue&family=Lobster&family=Oswald:wght@200..700&display=swap'); */
+/* 
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bebas+Neue&family=Lobster&family=Oswald:wght@200..700&family=Righteous&family=Satisfy&display=swap'); */
+/* 
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bangers&family=Bebas+Neue&family=Lobster&family=Oswald:wght@200..700&family=Righteous&family=Satisfy&display=swap'); */
+
 *{
     padding: 0;
     margin: 0;
@@ -6,23 +18,82 @@
     /* border: 1px solid blueviolet; */
 
 }
-body{
+/* body{
   font-family: "Nerko One", cursive;
   font-weight: 400;
   font-style: normal;
-  /* background-color: #AFDDE5; */
-}
+} */
+
+
+
+/* body{
+
+    font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+/* body{
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+} */
+
+/* body{
+    font-family: "Amatic SC", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+} */
+
+/* body{
+
+    font-family: "Righteous", sans-serif;
+  font-weight: 400;
+  font-style: normal
+} */
+
+/* body{
+    font-family: "Bangers", system-ui;
+  font-weight: 400;
+  font-style: normal;
+
+} */
 
 *:not(:defined){
     border: none;
 }
+body{
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    /* background-color:#f9f9f9; */
+    background-color:  #DCDCDC  ;
+}
 .cover-viewport{
-    min-height: calc(100vh - 150px);
-    
+    min-height: calc(100vh - 182px);
+    background-color: white;
+    padding: 16px;
+    border-radius: 12px;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+.hero-container{
+    height: 12vw;
+    /* background-color: white; */
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: white;
+    margin-left: -16px;
+    margin-right:-16px;
 }
 
 li{
     list-style: none;
+}
+a{
+
+  text-decoration: none; /* Remove underline */
+  color: inherit; 
 }
 .global-wrapper{
     max-width: 1400px;
@@ -32,12 +103,7 @@ li{
     padding-right: 16px;
 }
 
-.hero-container{
-    height: 12vw;
-    background-color: white;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
+
 .hero-heading{
     text-align: center;
     display: flex;
@@ -60,4 +126,10 @@ li{
     background-color: white;
     cursor: pointer;
     position: relative;
+}
+
+@media (max-width:1440px) {
+    .cover-viewport{
+        border-radius: 0px;
+    }
 }
